--- a/svelte-front/package.json
+++ b/svelte-front/package.json
@@ -22,6 +22,7 @@
 	"dependencies": {
 		"@picocss/pico": "^1.5.7",
 		"iconify-icon": "^1.0.3",
+		"socket.io-client": "^4.6.1",
 		"svelte-drawer-component": "^1.2.2"
 	}
 }
