--- a/nest-back/package.json
+++ b/nest-back/package.json
@@ -37,9 +37,11 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "joi": "^17.8.4",
+    "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.10.0",
+    "qrcode": "^1.5.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "socket.io": "^4.6.1",
