--- a/nest-back/package.json
+++ b/nest-back/package.json
@@ -46,6 +46,7 @@
     "rxjs": "^7.2.0",
     "socket.io": "^4.6.1",
     "typeorm": "^0.3.12",
+    "unique-names-generator": "^4.7.1",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
