--- a/svelte-front/package.json
+++ b/svelte-front/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/kit": "^1.0.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-loading-spinners": "^0.3.4",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
