--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,42 @@
-version: '3.7'
+version: '3.9'
+
+networks:
+  docker-network:
+    name: docker-network
+    driver: bridge
 
 services:
-
-  database:
-    image: postgres:14
-    container_name: db
+  db:
+    container_name: postgres
+    image: postgres
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-    volumes:
-      - ./backend/data/pg:/var/lib/postgresql/data
-    entrypoint:
-      [
-        "bash",
-        "-c",
-        "echo '' > /var/lib/postgresql/data/.keep && rm /var/lib/postgresql/data/.keep && docker-entrypoint.sh postgres"
-      ]
+      POSTGRES_PASSWORD: passwd
     ports:
-      - ${POSTGRES_PORT}:5432
+      - 5432:5432
+    networks:
+      - docker-network
+    restart: always
+  nest:
+    depends_on:
+      - db
+    container_name: backend
+    build: ./nest-back
+    ports:
+      - 3000:3000
+    networks:
+      - docker-network
+    env_file:
+      - ./.env
+    restart: always
+  svelte:
+    depends_on:
+      - nest
+    container_name: frontend
+    build: ./svelte-front
+    ports:
+     - 5173:5173
+    networks:
+      - docker-network
+    env_file:
+      - ./.env
     restart: always
