--- a/svelte-front/package.json
+++ b/svelte-front/package.json
@@ -12,6 +12,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.2.3",
 		"@sveltejs/kit": "^1.0.0",
+		"@types/crypto-js": "^4.1.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-loading-spinners": "^0.3.4",
@@ -22,6 +23,7 @@
 	"type": "module",
 	"dependencies": {
 		"@picocss/pico": "^1.5.7",
+		"crypto-js": "^4.1.1",
 		"iconify-icon": "^1.0.3",
 		"socket.io-client": "^4.6.1",
 		"svelte-drawer-component": "^1.2.2"
