added AUTH_APP_NAME for google auth

--- a/.env_example
+++ b/.env_example
@@ -8,3 +8,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=passwd
 JWT_SECRET=my-32-character-ultra-secure-and-ultra-long-secret # should be at least 32 characters
 JWT_EXPIRATION_TIME=3600
+AUTH_APP_NAME=TRANSCENDENCE
