--- a/.env_example
+++ b/.env_example
@@ -1,8 +1,7 @@
 VITE_HOST=localhost
 VITE_NESTJS_PORT=3000
 SVELTEKIT_PORT=5173
-VITE_INTRA_LOGIN_URL=
-INTRA_CLIENT_UID=
+VITE_INTRA_CLIENT_UID=
 INTRA_SECRET=
 POSTGRES_HOST=postgres
 POSTGRES_DB=postgres
