--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
         - VITE_HOST=$VITE_HOST
         - VITE_NESTJS_PORT=$VITE_NESTJS_PORT
         - SVELTEKIT_PORT=$SVELTEKIT_PORT
-        - VITE_INTRA_LOGIN_URL=$VITE_INTRA_LOGIN_URL
+        - VITE_INTRA_CLIENT_UID=$VITE_INTRA_CLIENT_UID
     ports:
      - 80:$SVELTEKIT_PORT
     networks:
