--- a/svelte-front/Dockerfile
+++ b/svelte-front/Dockerfile
@@ -11,7 +11,7 @@ COPY . .
 ARG VITE_HOST
 ARG VITE_NESTJS_PORT
 ARG SVELTEKIT_PORT
-ARG VITE_INTRA_LOGIN_URL
+ARG VITE_INTRA_CLIENT_UID
 
 RUN npm run build
 
